############2015-10-9#####################
alter table flashsale_register  add initialize_pwd tinyint(1) default 0 NOT NULL;
############2015-10-8#####################
alter table flashsale_dinghuo_returngoods add status int(11) default 0;
############2015-10-07#####################
alter table shop_items_productsku add sku_inferior_num int(11) default 0;
############2015-10-04######################
alter table xiaolumm_xiaolumama add column modified datetime NOT NULL;
############2015-9-28######################
alter table xiaolumm_xiaolumama add target_complete double Not null;
########### 2015-9-25################
alter table pay_coupon_template add column limit_num int(11) default 1;
########### 2015-9-18 #################
alter table shop_items_product add column sale_product bigint(20) NOT NULL DEFAULT 0;
CREATE INDEX `shop_items_product_bdef1e5a` ON `shop_items_product` (`sale_product`);
########### 2015-9-17 #################
alter table supply_chain_stats_order add refund_num int(11) default 0;
alter table supply_chain_stats_order add refund_amount_num int(11) default 0;
########### 2015-9-17 #################
alter table shop_items_contrastcontent add column status varchar(32) default 'normal';
alter table shop_items_contrastcontent add column sid int(11) default 0;
########### 2015-9-6 #################
alter table flashsale_productdetail modify column note varchar(256);
########### 2015-8-26 #################
alter table flashsale_order add discount_fee double NOT NULL;
########### 2015-8-26 #################
CREATE INDEX `shop_items_product_52094d6e` ON `shop_items_product` (`name`);
CREATE INDEX `shop_items_product_aff30766` ON `shop_items_product` (`model_id`);
CREATE INDEX `flashsale_productdetail_44e36594` ON `flashsale_productdetail` (`is_recommend`);
CREATE INDEX `flashsale_productdetail_28ffeec5` ON `flashsale_productdetail` (`is_seckill`);
CREATE INDEX `flashsale_productdetail_dfd6476a` ON `flashsale_productdetail` (`buy_limit`);