@@ -1,3 +1,5 @@
+############2015-10-13######################
+alter table xiaolumm_xiaolumama add lowest_uncoushout double Not null;
 ############2015-10-9#####################
 alter table flashsale_register  add initialize_pwd tinyint(1) default 0 NOT NULL;
 ############2015-10-8#####################
